add qml modules

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -2,10 +2,23 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-file(GLOB SOURCES src/*.cpp src/*.h *.qrc)
+file(GLOB SOURCES src/*.cpp src/*.h)
 
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
+
+qt_add_resources(${PROJECT_NAME} "configuration"
+    PREFIX "/"
+    FILES
+        qtquickcontrols2.conf
+)
+
+include(qmlmodules)
+
+target_sources(HalperUi
+  PRIVATE
+    qtquickcontrols2.conf
+)
 
 target_link_libraries(${PROJECT_NAME}
     Qt6::Core
@@ -13,4 +26,20 @@ target_link_libraries(${PROJECT_NAME}
     Qt6::Widgets
     Qt6::Network
     Qt6::Qml
+    Qt6::QuickControls2
 )
+
+install(TARGETS ${PROJECT_NAME}
+    BUNDLE  DESTINATION .
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+qt_generate_deploy_qml_app_script(
+    TARGET ${PROJECT_NAME}
+    OUTPUT_SCRIPT deploy_script
+    MACOS_BUNDLE_POST_BUILD
+    NO_UNSUPPORTED_PLATFORM_ERROR
+    DEPLOY_USER_QML_MODULES_ON_UNSUPPORTED_PLATFORM
+)
+install(SCRIPT ${deploy_script})
